src/reporting/snapshots/feotest__reporting__transparent__tests__early_termination_failure_inevitable.snap
---
source: src/reporting/transparent.rs
expression: "render_with(&record, &threshold_first(100, 0.90))"
---
║═════════════════════════════════════════════════════════════║
║ TRANSPARENT STATISTICS                                      ║
║                                                             ║
║ Test:        degraded-service                               ║
║ Approach:    threshold-first                                ║
║ Intent:      VERIFICATION                                   ║
║ Methodology: 1.6.0                                          ║
║ Origin:      EMPIRICAL                                      ║
║─────────────────────────────────────────────────────────────║
║ HYPOTHESES                                                  ║
║                                                             ║
║ H0: p_test = p_baseline  (no degradation)                   ║
║ H1: p_test < p_baseline  (the service has degraded)         ║
║─────────────────────────────────────────────────────────────║
║ OBSERVED DATA AND INFERENCE                                 ║
║                                                             ║
║ Successes / Total:    17 / 25                               ║
║ Observed pass rate:   0.680                                 ║
║ Decision rule:        regression/fisher v1                  ║
║ Threshold:            0.720                                 ║
║   (declared floor; each criterion decided by its rule)      ║
║ Baseline:             27 / 30                               ║
║ Cutoff:               18                                    ║
║ Size at common rate:  0.0175                                ║
║ Min detectable drop:  0.3104 (80% design power)             ║
║ Wilson lower [95%]: 0.516 (descriptive)                     ║
║ Standard error:       0.093                                 ║
║─────────────────────────────────────────────────────────────║
║ EARLY TERMINATION                                           ║
║                                                             ║
║ Reason:     Failure inevitable                              ║
║ Executed:   25 of 100 planned samples                       ║
║─────────────────────────────────────────────────────────────║
║ VERDICT                                                     ║
║                                                             ║
║ FAIL                                                        ║
║                                                             ║
║ The test failed: 17 of 25 < cutoff 18 (regression/fisher).  ║
║═════════════════════════════════════════════════════════════║
