src/reporting/snapshots/feotest__reporting__transparent__tests__fail_verdict_sample_size_first.snap
---
source: src/reporting/transparent.rs
expression: "render_with(&fail_record(), &approach)"
---
║═════════════════════════════════════════════════════════════║
║ TRANSPARENT STATISTICS                                      ║
║                                                             ║
║ Test:        my-service                                     ║
║ Approach:    sample-size-first                              ║
║ Intent:      VERIFICATION                                   ║
║ Methodology: 1.5.0                                          ║
║ Origin:      EMPIRICAL                                      ║
║─────────────────────────────────────────────────────────────║
║ HYPOTHESES                                                  ║
║                                                             ║
║ H0: p_test = p_baseline  (no degradation)                   ║
║ H1: p_test < p_baseline  (the service has degraded)         ║
║─────────────────────────────────────────────────────────────║
║ OBSERVED DATA AND INFERENCE                                 ║
║                                                             ║
║ Successes / Total:    80 / 100                              ║
║ Observed pass rate:   0.800                                 ║
║ Decision rule:        regression/fisher v1                  ║
║ Threshold:            0.910                                 ║
║   (Fisher cutoff at 0.950 confidence)                       ║
║ Baseline:             951 / 1000                            ║
║ Cutoff:               91                                    ║
║ Size at common rate:  0.0340                                ║
║ Min detectable drop:  0.0751 (80% design power)             ║
║ Wilson lower [95%]: 0.727 (descriptive)                     ║
║ Standard error:       0.040                                 ║
║─────────────────────────────────────────────────────────────║
║ VERDICT                                                     ║
║                                                             ║
║ FAIL                                                        ║
║                                                             ║
║ The test failed: 80 of 100 < cutoff 91 (regression/fisher). ║
║═════════════════════════════════════════════════════════════║
