src/reporting/snapshots/feotest__reporting__transparent__tests__inconclusive_verdict.snap
---
source: src/reporting/transparent.rs
expression: "render_with(&inconclusive_record(), &threshold_first(10, 0.80))"
---
║═════════════════════════════════════════════════════════════║
║ TRANSPARENT STATISTICS                                      ║
║                                                             ║
║ Test:        flaky-service                                  ║
║ Approach:    threshold-first                                ║
║ Intent:      VERIFICATION                                   ║
║ Methodology: 1.5.0                                          ║
║─────────────────────────────────────────────────────────────║
║ VERDICT                                                     ║
║                                                             ║
║ INCONCLUSIVE                                                ║
║                                                             ║
║ The data cannot decide the test: insufficient evidence.     ║
║═════════════════════════════════════════════════════════════║
